# CTensor

./: CMakeLists.txt  README.md  Relu.cpp  Relu.h  add.cpp  autograd.cpp  autograd.h  batchnorm.cpp  batchnorm.h  check.cpp  check.h  code.py  conv.cpp  conv.h  convnum.cpp  convtest.cpp  data.cpp  data.h  dataloader.h  debug_cnn.cpp  dropout.cpp  dropout.h  exemple.cpp  gradient.h  layer.cpp  layer.h  loss.cpp  loss.h  matmulmis.cpp  mnist.h  module.h  ops.h  ops1.cpp  ops1.h  ops_avx.cpp  ops_avx.h  ops_intr.h  opsmp.cpp  opsmp.h  opspm.cpp  (+23 more)
%CD%/install/include/myproject/core/: autograd.h  ops.h  tensor.h
%CD%/install/include/myproject/cpu/AVX2/: ops_avx2_d64.h  ops_avx2_f32.h
%CD%/install/include/myproject/cpu/AVX512/: ops_avx512_d64.h
%CD%/install/include/myproject/neuralnet/: check.h  loss.h
%CD%/install/include/myproject/neuralnet/batchnorm/: batchnorm.h
%CD%/install/lib/cmake/MyProject/: MyProjectConfig.cmake  MyProjectTargets.cmake
Docs/: Autograd.md  Chekpoint.md  Conv.md  Data.md  Dataloader.md  Device.md  Dropout.md  Layer.md  Loss.md  Metrics.md  Norm.md  Ops.md  Pooling.md  Tensor.md  Training.md  Weights.md  getting_started.md  nn.md  relu.md
build copy/: CMakeCache.txt  testmnist  transformetest
src/: autograd.cpp  autograd.h  avx_flag.cpp  core.h  data.cpp  data.h  device.h  dispatch.h  neuralnet.h  ops.cpp  ops.h  ops_dispatch  ops_dispatch.cpp  ops_dispatch.h  opsmp.cpp  opsmp.h  tensor.cpp  tensor.h
src/core/: autograd.cpp  autograd.h  data.h  device.h  dispatch.h  ops.cpp  ops.h  ops_dispatch.cpp  ops_dispatch.h  opsmp.cpp  opsmp.h  tensor copy.txt  tensor.cpp  tensor.h  transforme.cpp  transforme.h
src/cpu/AVX2/: ops_avx2_d64.cpp  ops_avx2_d64.h  ops_avx2_f32.cpp  ops_avx2_f32.h
src/cpu/AVX512/: ops_avx512_d64.cpp  ops_avx512_d64.h  ops_avx512_f32.cpp  ops_avx512_f32.h
src/cpu/AVX512/Fused_kernels/: ops_avx512_d64_fused.h  ops_avx512_f32_fused.cpp  ops_avx512_f32_fused.h
src/dashboard/: dashboard.cpp  dashboard.h  dashboard.py  dashborad.py
src/gpu/cuda/: ops_CUDA.cu  ops_CUDA.h
src/gpu/cuda/F32/: ops_CUDA_f32.cu  ops_CUDA_f32.h
src/gpu/cuda/d64/: ops_CUDA_d64.cu  ops_CUDA_d64.h
src/neuralnet/: Relu.cpp  Relu.h  check.cpp  check.h  conv.h  layer.cpp  layer.h  loss.cpp  loss.h  metrics.h  module.h  nn.h  train_utils.h  training_utils.h
src/neuralnet/batchnorm/: batchnorm.cpp  batchnorm.h
src/neuralnet/conv/: conv.cpp  conv.h
src/neuralnet/dataloader/: dataloader.h
src/neuralnet/dataset/: mnist.h
src/neuralnet/dropout/: dropout.cpp  dropout.h
src/neuralnet/norm/: norm.cpp  norm.h
src/neuralnet/pooling/: pooling.cpp  pooling.h
src/neuralnet/vision/: vision_dataset.h
src/neuralnet/weights/: init.h  weights_init.cpp  weights_init.h
src/neurtalnet/: loss.cpp  loss.h  module.h
test/: convnet_test.cpp  inf_conv.cpp  test.cpp  test_ops.cpp  testmnist.cpp  time_avx.cpp  train_conv.cpp  train_mnist.cpp  transforme_test.cpp
